Update carousel and lightbox

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-feed.author=Published at wildfly-hikingtracks.1d35.starter-us-east-1.openshiftapps.com
+feed.author=Published at hikingtracks.johannes-beck.name
 feed.title=X1 HikingTracks
 feed.id=urn:uuid:3553ad50-450b-11e1-8696-001a923ebf49
-feed.url=http:///wildfly-hikingtracks.1d35.starter-us-east-1.openshiftapps.com
+feed.url=http://hikingtracks.johannes-beck.name
 google.clientid=48001064174-8ee9rddd482jhp93i3na0b39ip27e39s.apps.googleusercontent.com
 google.clientsecret=iNxH24FVj2-krToagN8i8lEU
 google.apikey=AIzaSyDWeHGoMQhMLrjL2P57l54AKhC7w_GyyXQ
