Create WF 12 branch for Openshift 3

--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -1,5 +1,5 @@
-feed.author=Published at Hikingtracks on Openshift 3
+feed.author=Published at hikingtracks.johannes-beck.name
 feed.title=X1 HikingTracks
 feed.id=urn:uuid:3553ad50-450b-11e1-8696-001a923ebf49
-feed.url=https://hikingtracks.johannes-beck.name
+feed.url=http://hikingtracks.johannes-beck.name
 google.geolocation=https://maps.googleapis.com/maps/api/geocode/json
