--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
       <dependency>
         <groupId>org.wildfly</groupId>
         <artifactId>wildfly-spec-api</artifactId>
-        <version>12.0.0.Final</version>
+        <version>13.0.0.Final</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -93,8 +93,8 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.hibernate.javax.persistence</groupId>
-      <artifactId>hibernate-jpa-2.1-api</artifactId>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -167,12 +167,12 @@
     <dependency>
       <groupId>org.infinispan</groupId>
       <artifactId>infinispan-jcache</artifactId>
-      <version>9.1.6.Final</version>
+      <version>9.2.4.Final</version>
     </dependency>
     <dependency>
       <groupId>org.infinispan</groupId>
       <artifactId>infinispan-cdi-embedded</artifactId>
-      <version>9.1.6.Final</version>
+      <version>9.2.4.Final</version>
     </dependency>
     <dependency>
       <groupId>javax.json</groupId>
