--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
+      <version>1.7.22</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
