--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
       <dependency>
         <groupId>org.wildfly</groupId>
         <artifactId>wildfly-spec-api</artifactId>
-        <version>14.0.1.Final</version>
+        <version>16.0.0.Final</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -126,7 +126,6 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.7</version><!--$NO-MVN-MAN-VER$ -->
     </dependency>
     <dependency>
       <groupId>org.apache.oltu.oauth2</groupId>
@@ -147,6 +146,11 @@
       <groupId>net.coobird</groupId>
       <artifactId>thumbnailator</artifactId>
       <version>0.4.8</version>
+    </dependency>
+    <dependency>
+      <groupId>com.drewnoakes</groupId>
+      <artifactId>metadata-extractor</artifactId>
+      <version>2.11.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
